fixed text on sticker, it was too short

--- a/angular5/src/assets/proride/styles.css
+++ b/angular5/src/assets/proride/styles.css
@@ -207,7 +207,7 @@ input.ng-valid:not(form) {
     overflow: hidden;
     white-space: nowrap;
     width: 245px;
-    height: 42px;
+    height: 64px;
 }
 
 .proride-bgsticker.bg-bardet { 
